--- a/PowerShell-Export-AsQrCode/PowerShell-Export-AsQrCode.csproj
+++ b/PowerShell-Export-AsQrCode/PowerShell-Export-AsQrCode.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{54D9B266-F5C4-4A63-8CC1-E8562F187326}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PowerShell_ExportToQrCode</RootNamespace>
-    <AssemblyName>PowerShell-ExportToQrCode</AssemblyName>
+    <RootNamespace>ExportQrCode</RootNamespace>
+    <AssemblyName>ExportQrCode</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -49,7 +49,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ExportAsQrCode.cs" />
+    <Compile Include="ExportQrCode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
